Prettier setup for code consistency